--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -1,10 +1,9 @@
 .button {
-  margin-top: 64px;
   height: 50px;
   border-radius: 8px;
   font-weight: 500;
   background: #835afd;
-  color: #FFF;
+  color: #fff;
   padding: 0 32px;
 
   display: flex;
@@ -21,7 +20,7 @@
   }
 
   &:not(:disabled):hover {
-    filter: brightness(0.9)
+    filter: brightness(0.9);
   }
 
   &:disabled {
