--- a/src/styles/room-code.scss
+++ b/src/styles/room-code.scss
@@ -1,4 +1,5 @@
 .room-code {
+  display: flex;
   height: 40px;
   border-radius: 8px;
   overflow: hidden;
@@ -7,12 +8,11 @@
   border: 1px solid #835afd;
   cursor: pointer;
 
-  display: flex;
-
   div {
     background: #835afd;
-    padding: 0 12px;
+    padding: 0 12px 20px;
     display: flex;
+
     justify-content: center;
     align-items: center;
   }
