--- a/src/Components/RoomCode/styles.scss
+++ b/src/Components/RoomCode/styles.scss
@@ -1,5 +1,4 @@
 .room-code {
-  display: flex;
   height: 40px;
   border-radius: 8px;
   overflow: hidden;
@@ -8,13 +7,15 @@
   border: 1px solid #835afd;
   cursor: pointer;
 
+  display: flex;
+
   div {
     background: #835afd;
-    padding: 0 12px 20px;
+    padding: 0 12px;
     display: flex;
-
     justify-content: center;
     align-items: center;
+    height: 100%;
   }
 
   span {
