--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -5,6 +5,7 @@
 
   aside {
     flex: 7;
+
     background: #835afd;
     color: #fff;
 
@@ -27,7 +28,7 @@
     p {
       font-size: 24px;
       line-height: 32px;
-      margin-top: 12px;
+      margin-top: 16px;
       color: #f8f8f8;
     }
   }
@@ -65,7 +66,7 @@
         height: 50px;
         border-radius: 8px;
         padding: 0 16px;
-        background:#FFF;
+        background: #fff;
         border: 1px solid #a8a8b3;
       }
 
@@ -73,7 +74,8 @@
         margin-top: 16px;
       }
 
-      button, input {
+      button,
+      input {
         width: 100%;
       }
     }
@@ -88,55 +90,55 @@
       }
     }
   }
-}
 
-.create-room {
-  margin-top: 64px;
-  height: 50px;
-  border-radius: 8px;
-  font-weight: 500;
-  background: #ea4335;
-  color: #FFF;
+  .create-room {
+    margin-top: 64px;
+    height: 50px;
+    border-radius: 8px;
+    font-weight: 500;
+    background: #ea4335;
+    color: #fff;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-  cursor: pointer;
-  border: 0;
+    cursor: pointer;
+    border: 0;
 
-  transition: filter 0.2s;
+    transition: filter 0.2s;
 
-  img {
-    margin-right: 8px;
+    img {
+      margin-right: 8px;
+    }
+
+    &:hover {
+      filter: brightness(0.9);
+    }
   }
 
-  &:hover {
-    filter: brightness(0.9)
-  }
-}
+  .separator {
+    font-size: 14px;
+    color: #a8a8b3;
 
-.separator {
-  font-size: 14px;
-  color: #a8a8b3;
+    margin: 32px 0;
+    display: flex;
+    align-items: center;
 
-  margin: 32px 0;
-  display: flex;
-  align-items: center;
+    &::before {
+      content: '';
+      flex: 1;
+      height: 1px;
+      background: #a8a8b3;
+      margin-right: 16px;
+    }
 
-  &::before {
-    content: '';
-    flex: 1;
-    height: 1px;
-    background: #a8a8b3;
-    margin-right: 16px;
-  }
-
-  &::after {
-    content: '';
-    flex: 1;
-    height: 1px;
-    background: #a8a8b3;
-    margin-left: 16px;
+    &::after {
+      content: '';
+      flex: 1;
+      height: 1px;
+      background: #a8a8b3;
+      margin-left: 16px;
+    }
   }
 }
